--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
      <div class="clt"></div>
         <footer>
-            <a href="./pages/page2.html">Page 2</a>
+            <a href="page2.html">Page 2</a>
         </footer>
 
 </body>
