--- a/page2.html
+++ b/page2.html
@@ -1,6 +1,6 @@
 
 <link rel="stylesheet" type="text/css"
-      href="stlye.css"</link>
+      href="stlyes.css"
 
 <body>
     <header>
@@ -63,7 +63,7 @@
 
 
  <footer>
-    <a href="index.html">Home page</a>
+    <a href="./index.html">Home page</a>
  </footer>
 
 <footer id="main-footer">
