--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+      
+ <head>     
 <link rel="stylesheet" type="text/css"
       href="stlyes.css"
-
+  </head>
+       
 <body>
     <header>
     <b> <h1>Welcome to the next page</h1><b/>
