--- a/page2.html
+++ b/page2.html
@@ -8,11 +8,11 @@
        
 <body>
     <header>
-    <b> <h1>Welcome to the next page</h1><b/>
+    <b> <h1>Welcome to the next page</h1></b>
   </header>
 
-  <img src="./img/thrill"width="300px"/>
-  <img src="./img/rome.jpg"width="300opx"/>
+  
+  <img src="./img/rome.jpg"width="300px"/>
   
  
     <div class="block">
